# oasis-cli

./: README.md  pyproject.toml
src/cloud_pipelines_oasis_cli/: git.py  main.py
src/cloud_pipelines_oasis_cli/templates/components/python-function-component/: component.py
src/cloud_pipelines_oasis_cli/templates/components/python-function-component1/: component.py
src/cloud_pipelines_oasis_cli/templates/components/shell-script-component/: component.yaml
src/cloud_pipelines_oasis_cli/templates/containers/generic-container-root/: .dockerignore
src/cloud_pipelines_oasis_cli/templates/containers/python-uv-container-root/: .dockerignore  Dockerfile  oasis.pipeline_component_root.yaml  pyproject.toml
tests/: test_components_regenerate_python_function_component.py
tests/test_data/python_function_component_1/: component.py
