[project]
name = "shopify-oasis"
version = "0.1.0"
description = "CLI for Cloud Pipelines"
readme = "README.md"
authors = [
    { name = "Alexey Volkov", email = "alexey.volkov@ark-kun.com" }
]
requires-python = ">=3.10"
dependencies = [
    "cloud-pipelines>=0.23.2.4",
    "gitpython>=3.1.44",
    "podman>=5.4.0.1",
    "pyyaml>=6.0.2",
    "tomli>=2.2.1",
    "typer>=0.15.3",
]

[project.scripts]
oasis = "cloud_pipelines_oasis_cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cloud_pipelines_oasis_cli"]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
